
softmmu_ss.add(when: 'CONFIG_DUMMY_TZC', if_true: files('dummy_tzc.c'))
softmmu_ss.add(when: 'CONFIG_DUMMY_COMMON', if_true: files('dummy_common.c'))
softmmu_ss.add(when: 'CONFIG_DUMMY_P29A_OTP', if_true: files('dummy_p29a_otp.c'))
softmmu_ss.add(when: 'CONFIG_DUMMY_P29A_SYS_CTRL', if_true: files('dummy_p29a_sys_ctrl.c'))
